--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-icons": "^4.11.0",
     "react-loader-spinner": "^5.4.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.3",
+    "styled-components": "^6.1.0",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
